fix: update makefile so it could work on the new code files structure

--- a/client/Makefile
+++ b/client/Makefile
@@ -1,8 +1,8 @@
 build:
-	go build -o ./out/client client.go
+	go build -o ./out/client ./
 
 run:
-	go run client.go
+	./out/client
 
 clean:
 	rm -rf ./out
